@@ -21,6 +21,7 @@ internal information that an error message displays.
 when you have wildcard servernames in apache. Enable the --with-vhost-override option if you want this capabillity. Only applicable if vhost allow/deny dir is enabled.
 	<LI>Added ability to only allow scripts run by a specific userid if the CGIWRAP_REQUIRE_USER env var is specified and the --with-env-require-user feature is enabled.
 	<LI>Changed to autoconf 2.5 style templates and eliminated acconfig.h.
+	<LI>Added option to enable the special PHP support only for non-executable files.
 </UL>
 
 <P><H3>New in version 3.7.1:</H3><UL>
